[gd_scene load_steps=2 format=3 uid="uid://boxyuo8hbptdd"]

[ext_resource type="Script" path="res://main/gameplay_manager.gd" id="1_yvwxg"]

[node name="GameplayManager" type="Node"]
editor_description = "Handles all gameplay events such as spawning enemies, controlling difficulty, updating score, taking damage, etc."
script = ExtResource("1_yvwxg")
ddcc_max_health = 999
starting_drones = 5

[node name="GameplayTimer" type="Timer" parent="."]

[connection signal="timeout" from="GameplayTimer" to="." method="_on_gameplay_timer_timeout"]
